# node-fuzzy-phrase

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json
bench/: fuzzysetbuilder.js
cloudformation/: ci.template  ci.template.js
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
scripts/: download_test_data.sh
test/: all.js  run_benchmarks.sh
