[package]
name = "node-fuzzy-phrase"
version = "0.1.0"
authors = ["Andrea del Rio <adelrio@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "node_fuzzy_phrase"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.23"

[dependencies]
neon = "0.1.23"
serde = "1.x"
serde_derive = "1.x"
neon-serde = "0.0.3"
fuzzy-phrase = { git = "https://github.com/mapbox/fuzzy-phrase", rev = "388e417d09f4b40f052dcf59a4a98b767c41799c" }
